@@ -1,0 +1,6 @@
+package dev.the_fireplace.textbook.domain.config;
+
+public interface ConfigValues
+{
+    int getPageByteLimit();
+}
